--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,22 +6,37 @@ $primary-color: #7e20fd;
 	box-sizing: border-box;
 }
 
+@mixin phone {
+	@media only screen and (max-width: 500px) {
+		@content;
+	}
+}
+
 h1 {
 	font-family: 'Roboto Slab', serif;
 	font-size: 48px;
 	font-weight: bold;
+	@include phone {
+		font-size: 24px;
+	}
 }
 
 h2 {
 	font-family: 'Roboto Slab', serif;
 	font-size: 24px;
 	font-weight: bold;
+	@include phone {
+		font-size: 14px;
+	}
 }
 
 h4 {
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	font-weight: normal;
+	@include phone {
+		font-size: 12px;
+	}
 }
 
 a {
@@ -51,6 +66,10 @@ button {
 	cursor: pointer;
 	&:hover {
 		background-color: #f1f1f1;
+	}
+	@include phone {
+		padding: 5px 15px;
+		font-size: 12px;
 	}
 }
 
@@ -87,6 +106,9 @@ nav {
 			}
 		}
 	}
+	@include phone {
+		display: none;
+	}
 }
 
 // home
@@ -98,11 +120,19 @@ nav {
 		margin: 32px 0;
 		font-weight: normal;
 		font-family: 'Lato', sans-serif;
+		@include phone {
+			margin: 16px 0;
+		}
 	}
 	.avatar {
 		width: 300px;
 		height: 320px;
 		margin: 32px 0;
+		@include phone {
+			width: 200px;
+			height: 220px;
+			margin: 16px 0;
+		}
 	}
 	.logos {
 		margin: 80px 0 0 0;
@@ -116,6 +146,14 @@ nav {
 			&:hover {
 				transform: translateY(-12px);
 			}
+			@include phone {
+				width: 26px;
+				height: 26px;
+				margin: 14px;
+			}
+		}
+		@include phone {
+			margin: 32px 0 0 0;
 		}
 	}
 }
@@ -137,6 +175,9 @@ nav {
 		text-align: center;
 		position: relative;
 		margin: 88px 0;
+		@include phone {
+			margin: 32px 0;
+		}
 	}
 
 	.skills {
@@ -154,12 +195,33 @@ nav {
 			img {
 				width: 88px;
 				height: 88px;
+				@include phone {
+					width: 40px;
+					height: 40px;
+				}
 			}
 			h4 {
 				margin-top: 32px;
 				color: $primary-color;
+				text-align: center;
+				@include phone {
+					margin-top: 14px;
+				}
+			}
+			@include phone {
+				width: 100px;
+				height: 100px;
 			}
 		}
+		@include phone {
+			bottom: -50px;
+			border-radius: 10px;
+		}
+	}
+
+	@include phone {
+		min-height: 160px;
+		padding: 0 16px;
 	}
 }
 
@@ -179,6 +241,14 @@ nav {
 					background-color: #6418c7;
 				}
 			}
+			@include phone {
+				margin: 10px;
+			}
+		}
+		@include phone {
+			@include flex;
+			flex-wrap: wrap;
+			margin: 32px 0 14px 0;
 		}
 	}
 	.cards {
@@ -197,13 +267,25 @@ nav {
 				height: 240px;
 				border-radius: 20px;
 				object-fit: cover;
-				box-shadow: -1px 10px 20px -18px rgba(0, 0, 0, 0.6);
+				box-shadow: -1px 10px 20px -18px rgba(0, 0, 0, 0.5);
+				@include phone {
+					width: 280px;
+					height: 200px;
+					border-radius: 10px;
+					box-shadow: -1px 10px 20px -18px rgba(0, 0, 0, 0.2);
+				}
 			}
 			h4 {
 				margin-top: 16px;
 				font-weight: bold;
 			}
+			@include phone {
+				margin: 16px;
+			}
 		}
+	}
+	@include phone {
+		margin: 120px 0 40px 0;
 	}
 }
 
@@ -212,7 +294,6 @@ nav {
 	@include flex;
 	margin: 120px 0;
 	flex-direction: column;
-
 	.content {
 		display: flex;
 		align-items: center;
@@ -225,8 +306,10 @@ nav {
 		.company {
 			color: #3b3b3b;
 		}
+		@include phone {
+			width: 280px;
+		}
 	}
-
 	.timeline {
 		margin: 80px 0;
 		.line {
@@ -235,7 +318,9 @@ nav {
 			height: 164px;
 			bottom: 0;
 			border: 1px solid $primary-color;
-
+			@include phone {
+				height: 100px;
+			}
 			.circle {
 				position: absolute;
 				width: 14px;
@@ -244,8 +329,21 @@ nav {
 				right: -7px;
 				border-radius: 7px;
 				background-color: $primary-color;
+				@include phone {
+					width: 7px;
+					height: 7px;
+					border-radius: 4px;
+					right: -3.5px;
+					bottom: 46px;
+				}
 			}
 		}
+		@include phone {
+			margin: 40px 0;
+		}
+	}
+	@include phone {
+		margin: 56px 0;
 	}
 }
 
@@ -270,14 +368,32 @@ footer {
 			img {
 				width: 32px;
 				height: 32px;
+				@include phone {
+					width: 16px;
+					height: 16px;
+				}
 			}
 			&:hover {
 				background-color: #f1f1f1;
 			}
+			@include phone {
+				width: 60px;
+				height: 40px;
+			}
+		}
+		@include phone {
+			top: -20px;
+			border-radius: 10px;
 		}
 	}
 	h4 {
 		margin-top: 40px;
 		color: #fff;
+		@include phone {
+			margin-top: 20px;
+		}
+	}
+	@include phone {
+		padding: 20px;
 	}
 }
