--- a/styles/style.css
+++ b/styles/style.css
@@ -74,8 +74,9 @@ button:hover {
 
 @media only screen and (max-width: 500px) {
   button {
-    padding: 5px 15px;
+    padding: 8px 16px;
     font-size: 12px;
+    border-radius: 5px;
   }
 }
 
@@ -210,6 +211,12 @@ nav ul li:hover {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  .home {
+    padding: 64px 0 24px 0;
+  }
+}
+
 .divider {
   border: 1px #e2e2e2 solid;
 }
@@ -301,8 +308,9 @@ nav ul li:hover {
 
 @media only screen and (max-width: 500px) {
   .about .skills .skill {
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
+    padding: 8px;
   }
 }
 
@@ -427,6 +435,12 @@ nav ul li:hover {
 .projects .cards .card h4 {
   margin-top: 16px;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 500px) {
+  .projects .cards .card h4 {
+    margin-top: 8px;
+  }
 }
 
 @media only screen and (max-width: 500px) {
