--- a/styles/style.scss
+++ b/styles/style.scss
@@ -68,8 +68,9 @@ button {
 		background-color: #f1f1f1;
 	}
 	@include phone {
-		padding: 5px 15px;
+		padding: 8px 16px;
 		font-size: 12px;
+		border-radius: 5px;
 	}
 }
 
@@ -156,6 +157,9 @@ nav {
 			margin: 32px 0 0 0;
 		}
 	}
+	@include phone {
+		padding: 64px 0 24px 0;
+	}
 }
 
 .divider {
@@ -209,8 +213,9 @@ nav {
 				}
 			}
 			@include phone {
-				width: 100px;
-				height: 100px;
+				width: 110px;
+				height: 110px;
+				padding: 8px;
 			}
 		}
 		@include phone {
@@ -278,6 +283,9 @@ nav {
 			h4 {
 				margin-top: 16px;
 				font-weight: bold;
+				@include phone {
+					margin-top: 8px;
+				}
 			}
 			@include phone {
 				margin: 16px;
