--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,7 @@ h4 {
 
 a {
   text-decoration: none;
+  color: #000;
 }
 
 img {
@@ -81,14 +82,17 @@ button:hover {
 }
 
 nav {
+  background-color: #fff;
+  z-index: 10;
+  width: 100%;
   height: 88px;
-  padding: 40px;
+  padding: 40px 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 nav h2 {
@@ -114,6 +118,7 @@ nav ul li {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   cursor: pointer;
+  border-bottom: 3px transparent solid;
 }
 
 nav ul li:hover {
@@ -126,7 +131,7 @@ nav ul li:hover {
   }
 }
 
-.home {
+#home {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -143,33 +148,33 @@ nav ul li:hover {
           flex-direction: column;
 }
 
-.home h2 {
+#home h2 {
   margin: 32px 0;
   font-weight: normal;
   font-family: 'Lato', sans-serif;
 }
 
 @media only screen and (max-width: 500px) {
-  .home h2 {
+  #home h2 {
     margin: 16px 0;
   }
 }
 
-.home .avatar {
+#home .avatar {
   width: 300px;
   height: 320px;
   margin: 32px 0;
 }
 
 @media only screen and (max-width: 500px) {
-  .home .avatar {
+  #home .avatar {
     width: 200px;
     height: 220px;
     margin: 16px 0;
   }
 }
 
-.home .logos {
+#home .logos {
   margin: 80px 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -184,7 +189,7 @@ nav ul li:hover {
       flex-wrap: wrap;
 }
 
-.home .logos img {
+#home .logos img {
   width: 56px;
   height: 56px;
   margin: 24px 24px 0 24px;
@@ -192,13 +197,13 @@ nav ul li:hover {
   transition: 0.2s ease-in;
 }
 
-.home .logos img:hover {
+#home .logos img:hover {
   -webkit-transform: translateY(-12px);
           transform: translateY(-12px);
 }
 
 @media only screen and (max-width: 500px) {
-  .home .logos img {
+  #home .logos img {
     width: 26px;
     height: 26px;
     margin: 14px;
@@ -206,13 +211,13 @@ nav ul li:hover {
 }
 
 @media only screen and (max-width: 500px) {
-  .home .logos {
+  #home .logos {
     margin: 32px 0 0 0;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .home {
+  #home {
     padding: 64px 0 24px 0;
   }
 }
@@ -328,7 +333,7 @@ nav ul li:hover {
   }
 }
 
-.projects {
+#projects {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -345,31 +350,31 @@ nav ul li:hover {
   margin: 300px 0 120px 0;
 }
 
-.projects .buttons {
+#projects .buttons {
   margin: 64px 0;
 }
 
-.projects .buttons button {
+#projects .buttons button {
   margin: 0 24px;
 }
 
-.projects .buttons button.active {
+#projects .buttons button.active {
   background-color: #7e20fd;
   color: #fff;
 }
 
-.projects .buttons button.active:hover {
+#projects .buttons button.active:hover {
   background-color: #6418c7;
 }
 
 @media only screen and (max-width: 500px) {
-  .projects .buttons button {
+  #projects .buttons button {
     margin: 10px;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .projects .buttons {
+  #projects .buttons {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -385,7 +390,7 @@ nav ul li:hover {
   }
 }
 
-.projects .cards {
+#projects .cards {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -400,62 +405,59 @@ nav ul li:hover {
       flex-wrap: wrap;
 }
 
-.projects .cards .card {
+#projects .cards .card {
   margin: 32px;
   text-align: center;
-  -webkit-transition: 0.2s ease-in;
-  transition: 0.2s ease-in;
 }
 
-.projects .cards .card:hover {
+#projects .cards .card img {
+  width: 320px;
+  height: 240px;
+  border-radius: 20px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+  cursor: pointer;
+}
+
+#projects .cards .card img:hover {
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
 }
 
-.projects .cards .card img {
-  width: 320px;
-  height: 240px;
-  border-radius: 20px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -webkit-box-shadow: -1px 10px 20px -18px rgba(0, 0, 0, 0.5);
-          box-shadow: -1px 10px 20px -18px rgba(0, 0, 0, 0.5);
-}
-
 @media only screen and (max-width: 500px) {
-  .projects .cards .card img {
+  #projects .cards .card img {
     width: 280px;
     height: 200px;
     border-radius: 10px;
-    -webkit-box-shadow: -1px 10px 20px -18px rgba(0, 0, 0, 0.2);
-            box-shadow: -1px 10px 20px -18px rgba(0, 0, 0, 0.2);
   }
 }
 
-.projects .cards .card h4 {
+#projects .cards .card h4 {
   margin-top: 16px;
   font-weight: bold;
 }
 
 @media only screen and (max-width: 500px) {
-  .projects .cards .card h4 {
+  #projects .cards .card h4 {
     margin-top: 8px;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .projects .cards .card {
+  #projects .cards .card {
     margin: 16px;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .projects {
+  #projects {
     margin: 120px 0 40px 0;
   }
 }
 
-.work {
+#work {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -472,7 +474,7 @@ nav ul li:hover {
           flex-direction: column;
 }
 
-.work .content {
+#work .content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -485,26 +487,26 @@ nav ul li:hover {
   width: 400px;
 }
 
-.work .content .position {
+#work .content .position {
   font-weight: bold;
   margin-bottom: 16px;
 }
 
-.work .content .company {
+#work .content .company {
   color: #3b3b3b;
 }
 
 @media only screen and (max-width: 500px) {
-  .work .content {
+  #work .content {
     width: 280px;
   }
 }
 
-.work .timeline {
+#work .timeline {
   margin: 80px 0;
 }
 
-.work .timeline .line {
+#work .timeline .line {
   position: relative;
   width: 0px;
   height: 164px;
@@ -513,12 +515,12 @@ nav ul li:hover {
 }
 
 @media only screen and (max-width: 500px) {
-  .work .timeline .line {
+  #work .timeline .line {
     height: 100px;
   }
 }
 
-.work .timeline .line .circle {
+#work .timeline .line .circle {
   position: absolute;
   width: 14px;
   height: 14px;
@@ -529,7 +531,7 @@ nav ul li:hover {
 }
 
 @media only screen and (max-width: 500px) {
-  .work .timeline .line .circle {
+  #work .timeline .line .circle {
     width: 7px;
     height: 7px;
     border-radius: 4px;
@@ -539,13 +541,13 @@ nav ul li:hover {
 }
 
 @media only screen and (max-width: 500px) {
-  .work .timeline {
+  #work .timeline {
     margin: 40px 0;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .work {
+  #work {
     margin: 56px 0;
   }
 }
@@ -599,8 +601,8 @@ footer .socialicons .icon img {
 
 @media only screen and (max-width: 500px) {
   footer .socialicons .icon img {
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
   }
 }
 
@@ -610,14 +612,14 @@ footer .socialicons .icon:hover {
 
 @media only screen and (max-width: 500px) {
   footer .socialicons .icon {
-    width: 60px;
-    height: 40px;
+    width: 50px;
+    height: 30px;
   }
 }
 
 @media only screen and (max-width: 500px) {
   footer .socialicons {
-    top: -20px;
+    top: -15px;
     border-radius: 10px;
   }
 }
@@ -629,7 +631,7 @@ footer h4 {
 
 @media only screen and (max-width: 500px) {
   footer h4 {
-    margin-top: 20px;
+    margin-top: 15px;
   }
 }
 
